# Discord-Bot

./: Cargo.toml
src/: main.rs
