[package]
name = "Discord-Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
serenity = { version = "0.12.4", default-features = false, features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }